--- a/Codigo Completo/index.html
+++ b/Codigo Completo/index.html
@@ -22,14 +22,12 @@
         main{
             border: 1px solid black;
             background-color: white;
-            padding-left: 55px;
-            padding-right: 55px;
+            padding: 5px;
             height: 80%;
             margin: 50px;
             border-radius: 10px;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            justify-content: flex-start;
             overflow-y: auto;
             flex-wrap: wrap;
         }
@@ -60,10 +58,11 @@
             padding: 5px;
             border-radius: 5px;
             bottom: 100%;
+            left: 50%;
             transform: translateY(150%);
             white-space: pre-line;
             width: 150px;
-            z-index: 3;
+            z-index: 1;
             opacity: 0;
             visibility: hidden;
             transition: opacity 0.2s, visibility 0.2s;
@@ -73,32 +72,17 @@
             opacity: 1;
             visibility: visible;
         }
-        .mostrar_grupos{
-            background-color: #eee;
-            border-radius: 8px;
-            border: 1px solid black;
-            margin: 5px;
-            width: 150px;
-            display: flex;
-            flex-wrap: wrap;
-        }
-        .headerDiv{
-            border-radius: 8px;
-            width: 100%;
-            height: 10%;
-        }
     </style>
 </head>
 <body>
 
     <header>
         <button type="button" id="id_btnAdc">Adicionar Vértice</button>
-        <button type="button" id="id_btnDeletar">Deletar vértice</button>
-        <button type="button" id="id_btnTarjan">Algoritmo de Tarjan</button>
+        <button type="button" id="id_MostrarVertices">Mostrar vértices</button>
     </header>
 
     <main id="id_main">
-
+        
     </main>
 
     <script src="tarjans.js"></script>
