--- a/Codigo Completo/index.html
+++ b/Codigo Completo/index.html
@@ -91,12 +91,14 @@
 </head>
 <body>
 
+    <!-- Header para colocar os botões para realizar atividades e criar o grafo -->
     <header>
         <button type="button" id="id_btnAdc">Adicionar Vértice</button>
         <button type="button" id="id_btnDeletar">Deletar vértice</button>
         <button type="button" id="id_btnTarjan">Algoritmo de Tarjan</button>
     </header>
 
+    <!-- Main onde será mostrado os objetos e grupos após rodar o algoritmo de tarjan -->
     <main id="id_main">
 
     </main>
