--- a/Codigo Completo/index.html
+++ b/Codigo Completo/index.html
@@ -9,7 +9,7 @@
         body{
             margin: 0;
             height: 100vh;
-            /* overflow: hidden; */
+            overflow: hidden;
             background-image: linear-gradient(#ddd, #aaa);
         }
         header{
@@ -91,15 +91,54 @@
             padding-left: 20px;
             padding-right: 20px;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            height: 300px;
-            width: 300px;
+            height: 100px;
+            width: 120px;
             background-color: rgb(168, 255, 224);
             position: absolute;
             bottom: 20px;
             right: 20px;
             border: 2px solid rgb(81, 81, 81);  
-            border-radius: 15px;
+            border-radius: 10px;
+            user-select: none;
             overflow-y: auto;
+            overflow-x: hidden;
+        }
+        @keyframes fecharMenu {
+            0%{
+                height: 300px;
+                width: 300px;
+            }
+            100%{
+                height: 100px;
+                width: 100px;
+                opacity: 0.2;
+            }
+        }
+        @keyframes abrirMenu {
+            0%{
+                opacity: 0.2;
+                height: 100px;
+                width: 100px;
+            }
+            100%{
+                height: 300px;
+                width: 300px;
+                opacity: 1;
+            }
+        }
+        ::-webkit-scrollbar {
+            width: 10px;
+        } 
+        ::-webkit-scrollbar-track {
+            background: #b0e2e2;
+            border-radius: 5px;
+        } 
+        ::-webkit-scrollbar-thumb {
+            background: #0D1F26;
+            border-radius: 10px;
+        } 
+        ::-webkit-scrollbar-thumb:hover {
+            background: #0D1F26;
         }
     </style>
 </head>
